--- a/e2e/custom.ini
+++ b/e2e/custom.ini
@@ -1,5 +1,2 @@
-[live_performance]
-measure_data_render_delay = true
-
 [feature_toggles]
-enable = live-pipeline, live-service-web-worker
+enable = live-service-web-worker
