--- a/devenv/docker/blocks/jaeger/docker-compose.yaml
+++ b/devenv/docker/blocks/jaeger/docker-compose.yaml
@@ -6,7 +6,7 @@
   # Additional loki to generate some traces
   # datasource URL: http://localhost:3100/
   loki:
-    image: grafana/loki:latest
+    image: grafana/loki:master
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
