Adding pnp-webpack-plugin to properly resolve dependencies in nested plugins.

--- a/plugins-bundled/internal/input-datasource/package.json
+++ b/plugins-bundled/internal/input-datasource/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "26.0.15",
     "@types/react": "17.0.30",
+    "pnp-webpack-plugin": "^1.7.0",
     "ts-loader": "8.0.11",
     "webpack": "5.58.1"
   },
