chore: make the "Detect" workflow fail if there were any breaking changes

--- a/.github/workflows/detect-breaking-changes-build.yml
+++ b/.github/workflows/detect-breaking-changes-build.yml
@@ -48,3 +48,7 @@ jobs:
       with:
         name: levitate
         path: levitate/
+      
+    - name: Exit
+      run: exit ${{ steps.breaking-changes.outputs.is_breaking }}
+      shell: bash
