add react-simple-compat to react-compat-moveable

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -54,6 +54,7 @@ packageExtensions:
       css-to-mat: ^1.0.3
       gesto: ^1.4.0
       overlap-area: ^1.0.0
+      react-simple-compat: 1.2.1
     peerDependencies:
       framework-utils: ^1.1.0
   react-dev-utils@11.0.4:
