add react-simple-compat resolution

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -46,6 +46,9 @@ packageExtensions:
     peerDependencies:
       react: 17.0.1
       react-dom: 17.0.1
+  react-compat-css-styled@1.0.8:
+    dependencies:
+      react-simple-compat: 1.2.1
   react-compat-moveable@0.15.2:
     dependencies:
       "@egjs/agent": ^2.2.1
