chore(fix-bump-version): trying to fix bump version

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           repository: "grafana/grafana-github-actions"
           path: ./actions
-          ref: main
+          ref: chore/fix-bump-version
       - uses: actions/setup-node@v2.4.1
         with:
           node-version: '14'
