chore(fix-bump-version): trying to fix bump version

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -83,6 +83,8 @@ jobs:
           node-version: '16'
       - name: Install Actions
         run: npm install --production --prefix ./actions
+      - name: Setup yarn
+        run: corepack enable
       - name: Run bump version (manually invoked)
         if: ${{ github.event.inputs.version != '' }}
         uses: ./actions/bump-version
