--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -43,7 +43,12 @@
     "@react-aria/focus": "3.5.0",
     "@react-aria/menu": "3.3.0",
     "@react-aria/overlays": "3.7.3",
+    "@react-aria/tabs": "3.1.0",
+    "@react-stately/collections": "3.3.4",
     "@react-stately/menu": "3.2.3",
+    "@react-stately/tabs": "3.0.1",
+    "@react-types/shared": "3.10.1",
+    "@react-types/tabs": "3.0.1",
     "@sentry/browser": "6.16.1",
     "ansicolor": "1.1.95",
     "calculate-size": "1.1.1",
