--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -3,7 +3,9 @@ on:
   pull_request_target:
     types:
       - opened
+      - reopened
       - synchronize
+      - ready_for_review      
   issues:
     types:
       - milestoned
