--- a/pkg/services/featuremgmt/testdata/features.yaml
+++ b/pkg/services/featuremgmt/testdata/features.yaml
@@ -1,7 +1,7 @@
 include:
- - included.yaml
+ - included.yaml # not yet supported
 
-vars:
+vars: 
   stack: something
   level: free
   valA: value from features.yaml
